semcore/table/src/style/table.shadow.css
@import '@semcore/utils/style/var.css';

STable {
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  box-sizing: border-box;
  border-style: hidden;
}

thead SRow {
  border: none;

  &:last-child {
    border-bottom: 1px solid var(--intergalactic-border-table-accent, #a9abb6);
  }
}

SCell {
  background: inherit;
  box-sizing: border-box;
}

SCell[align='center'] {
  text-align: center;
}

SCell[align='left'] {
  text-align: left;
}

SCell[align='right'] {
  text-align: right;
}

SCell[valign='middle'] {
  vertical-align: middle;
}

SCell[valign='top'] {
  vertical-align: top;
}

SCell[valign='bottom'] {
  vertical-align: bottom;
}

SCell[use='primary'] {
  padding: var(--intergalactic-spacing-3x, 12px);
}

SCell[use='primary'][compact] {
  padding: var(--intergalactic-spacing-3x, 12px) var(--intergalactic-spacing-2x, 8px);
}

SCell[use='secondary'] {
  padding: var(--intergalactic-spacing-2x, 8px);
}

SCellHead {
  font-size: var(--intergalactic-fs-100, 12px);
  font-weight: normal;
  line-height: 18px;
  color: var(--intergalactic-text-primary, #191b23);
  cursor: default;
  box-sizing: border-box;
  /* for fixed header */
  z-index: 1;

  &:focus-visible {
    outline: none;
    box-shadow: inset var(--intergalactic-keyboard-focus, 0px 0px 0px 3px rgba(0, 143, 248, 0.3));
  }
}

SCellHeadContent {
  display: inline-flex;
  /* display: flex; */
  max-width: 100%;
  min-width: 0;
}

SCellHead[use='primary'] {
  background-color: var(--intergalactic-table-th-primary-cell, #f4f5f9);
  border-color: var(--intergalactic-border-secondary, #e0e1e9);
}

SCellHead[use='secondary'] {
  background-color: var(--intergalactic-table-td-cell, #ffffff);
  border-width: 1px 0;
  border-color: var(--intergalactic-border-table-accent, #a9abb6);
}

SCellHead[sorting] {
  cursor: pointer;

  &[use='primary']:hover {
    background-color: var(--intergalactic-table-th-primary-cell-hover, #e0e1e9);
  }

  &:hover SSortWrapper {
    opacity: 1;
  }
}

SCellHead[use='primary'][active] {
  background-color: var(--intergalactic-table-th-primary-cell-active, #e0e1e9);
}

SCellHead[active] SCellHeadIconAsc {
  position: relative;
}

SCellHead[active] SCellHeadIconDesc {
  position: relative;
}

SCellHead[active] SSortWrapper {
  width: 16px;
  margin-left: var(--intergalactic-spacing-1x, 4px);
  opacity: 1;
}

SSortWrapper {
  flex-shrink: 999;
  position: relative;
  width: 20px;
  height: 0;
  opacity: 0;
}

SSortWrapper:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 20px;
  height: 16px;
}

SCellHead[use='primary'] SSortWrapper:before {
  background: linear-gradient(
    270deg,
    var(--intergalactic-table-th-primary-cell-hover, #e0e1e9) 67.5%,
    rgba(224, 225, 233, 0) 105%
  );
}

SCellHead[use='secondary'] SSortWrapper:before {
  background: linear-gradient(
    270deg,
    var(--intergalactic-table-th-secondary-cell, #ffffff) 67.5%,
    rgba(255, 255, 255, 0) 105%
  );
}

SCellHeadIconAsc,
SCellHeadIconDesc {
  fill: var(--intergalactic-icon-secondary-neutral-hover-active, #8a8e9b);
  position: absolute;
  top: 0;
  right: 0;
}

SRow {
  transition: background-color 0.1s ease;
  border-bottom: 1px solid var(--intergalactic-border-secondary, #e0e1e9);

  &:last-child {
    & SCellRow {
      box-shadow: none;
    }
  }
}

SRow[theme='default'],
SCellRow[theme='default'] {
  background-color: var(--intergalactic-bg-primary-neutral, #ffffff);
}

SRow[theme='default']:hover,
SRow[theme]:hover SCellRow[theme='default'],
SCellRow[highlighted][theme='default'],
SCellRow[interactive][theme='default']:hover {
  /* The color is hardcoded because need hex(in figma rgba) */
  /* disable-tokens-validator */
  background-color: var(--intergalactic-table-td-cell-hover, #f0f0f4);
}

SRow[theme='info'],
SCellRow[theme='info'] {
  background-color: var(--intergalactic-table-td-cell-selected, #e9f7ff);
}

SRow[theme='info']:hover,
SRow[theme]:hover SCellRow[theme='info'],
SCellRow[highlighted][theme='info'],
SCellRow[interactive][theme='info']:hover {
  background-color: var(--intergalactic-table-td-cell-selected-hover, #c4e5fe);
}

SRow[theme='success'],
SCellRow[theme='success'] {
  background-color: var(--intergalactic-table-td-cell-new, #dbfee8);
}

SRow[theme='success']:hover,
SRow[theme]:hover SCellRow[theme='success'],
SCellRow[highlighted][theme='success'],
SCellRow[interactive][theme='success']:hover {
  background-color: var(--intergalactic-table-td-cell-new-hover, #9ef2c9);
}

SRow[theme='warning'],
SCellRow[theme='warning'] {
  background-color: var(--intergalactic-table-td-cell-warning, #fff3d9);
}

SRow[theme='warning']:hover,
SRow[theme]:hover SCellRow[theme='warning'],
SCellRow[highlighted][theme='warning'],
SCellRow[interactive][theme='warning']:hover {
  background-color: var(--intergalactic-table-td-cell-warning-hover, #ffdca2);
}

SRow[theme='danger'],
SCellRow[theme='danger'] {
  background-color: var(--intergalactic-table-td-cell-critical, #fff0f7);
}

SRow[theme='danger']:hover,
SRow[theme]:hover SCellRow[theme='danger'],
SCellRow[highlighted][theme='danger'],
SCellRow[interactive][theme='danger']:hover {
  background-color: var(--intergalactic-table-td-cell-critical-hover, #ffd7df);
}

SRow[interactive],
SCellRow[interactive] {
  cursor: pointer;
}

SCellRow[borderRight] {
  border-right: 1px solid var(--intergalactic-border-secondary, #e0e1e9);
}

SCellRow[borderLeft] {
  border-left: 1px solid var(--intergalactic-border-secondary, #e0e1e9);
}

SCellRow {
  font-size: var(--intergalactic-fs-200, 14px);
  line-height: var(--intergalactic-lh-200, 142%);
  color: var(--intergalactic-text-primary, #191b23);
}

SStickyHead {
  position: absolute;
  height: auto;
  width: auto;
}

SStickyHeadTable {
  table-layout: fixed;
}

SStickyHeadTable {
  border-bottom: none;
}

SStickyHead[position='fixed'] {
  position: fixed;
  z-index: 1;
}

SStickyHead[position='top'] {
  top: 0;
}

Table-parent {
  table-layout: fixed;
}

Header-hidden {
  visibility: hidden;
  z-index: -1;
}

@media (prefers-reduced-motion) {
  SRow {
    transition: none;
  }
}

